Fixed gradient of body on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -899,6 +899,9 @@ a:focus, a:hover {
   .executives .container .executive-member {
     min-height: 220px;
   }
+  .header-container {
+    background: none;
+  }
 }
 
 @media only screen and (max-width: 479px) {
